# greek_rnn

./: .firebaserc  .gitignore  DECODER.md  Dockerfile  Makefile  README.md  cloudbuild.yaml  entrypoint.sh  firebase.json  pyproject.toml  requirements-cpu-no-torch.txt  requirements-cpu-torch.txt  requirements-cpu.txt  requirements-dev.txt  requirements.txt  setup.sh
coptic_char_generator-main/: coptic_char_data.py  coptic_char_generator.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: FileUploadForm.tsx  HistoryWidget.tsx  ModelSelector.tsx  PredictForm.tsx  PredictKForm.tsx  RankForm.tsx  ReconstructionDisplay.tsx  Widget.tsx
greek_rnn/: api.py  api_config.py  api_models.py  data_stats.py  greek_char_data.py  greek_char_generator.py  greek_model.py  greek_rnn.py  greek_utils.py  letter_tokenizer.py  main.py  routes.py
greek_rnn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
greek_rnn/models/best/: .gitkeep
greek_rnn/results/: top_k_20251010_070002.csv
greek_rnn/wandb/run-20241119_210230-8pg9kdfd/files/: config.yaml  wandb-metadata.json
greek_rnn/wandb/run-20241120_013526-jcabnb9c/files/: wandb-metadata.json
greek_rnn/wandb/run-20241120_033803-0tr733v6/files/: wandb-metadata.json
greek_rnn/wandb/run-20241121_011236-bc8narwv/files/: wandb-metadata.json
greek_rnn/wandb/run-20241121_104658-v8f4cpns/files/: wandb-metadata.json  wandb-summary.json
greek_rnn/wandb/run-20250110_103207-oibxubzn/files/: wandb-metadata.json
rnn_code/: __init__.py  data_stats.py  greek_char_data.py  greek_char_generator.py  greek_rnn.py  greek_utils.py  letter_tokenizer.py  main.py
rnn_code/data/: trigram_lookup.json
rnn_code/greek_rnn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rnn_code/wandb/: latest-run
rnn_code/wandb/run-20241119_210230-8pg9kdfd/files/: wandb-summary.json
rnn_code/wandb/run-20241119_213223-jgetvbd8/files/: requirements.txt  wandb-metadata.json  wandb-summary.json
rnn_code/wandb/run-20241120_013526-jcabnb9c/files/: wandb-summary.json
rnn_code/wandb/run-20241120_033803-0tr733v6/files/: wandb-summary.json
rnn_code/wandb/run-20241121_011236-bc8narwv/files/: wandb-summary.json
rnn_code/wandb/run-20250110_103207-oibxubzn/: run-oibxubzn.wandb
scripts/: README.md  convert_model_specs.py  grk_rnn_train_1.sh  grk_rnn_train_2.sh  grk_rnn_train_3.sh  grk_rnn_train_4.sh  rnn_four_strats.sh
scripts/slurm/: grk_rnn_train_1.sh  grk_rnn_train_2.sh  grk_rnn_train_3.sh  grk_rnn_train_4.sh  rnn_four_strats.sh
strat_experiments/2025-07/: current_architecture_specs.md
tests/: conftest.py  test_data_stats.py  test_greek_char_data.py  test_greek_char_generator.py  test_greek_utils.py  test_letter_tokenizer.py
tests/integration/: test_rank.py
tests/unit/: test_data_stats.py  test_greek_char_data.py  test_greek_char_generator.py  test_greek_model.py  test_greek_rnn.py  test_greek_utils.py  test_letter_tokenizer.py
