[tool.poetry]
name = "rnn-code"
version = "0.1.0"
description = ""
authors = ["andrewcmayo <acmayo@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
numpy = "^2.1.0"
nltk = "^3.9.1"
regex = "^2024.7.24"
wandb = "^0.18.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
