[project]
name = "greek-rnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2024.8.30 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "charset-normalizer==3.4.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "click==8.1.7 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "colorama==0.4.6 ; python_full_version >= '3.12' and python_full_version < '4.0' and sys_platform == 'win32'",
    "docker-pycreds==0.4.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "filelock==3.15.4 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "fsspec==2024.6.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "gitdb==4.0.11 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "gitpython==3.1.43 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "idna==3.10 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "jinja2==3.1.4 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "joblib==1.4.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "markupsafe==2.1.5 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "mpmath==1.3.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "networkx==3.3 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "numpy==2.1.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "nvidia-cublas-cu12==12.1.3.1 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12==12.1.105 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12==12.1.105 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.1.105 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12==9.1.0.70 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.0.2.54 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.2.106 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.4.5.107 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.1.0.106 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nccl-cu12==2.20.5 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.6.20 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.1.105 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "platformdirs==4.3.6 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "protobuf==5.28.3 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "psutil==6.0.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "pyyaml==6.0.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "requests==2.32.3 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "sentry-sdk==2.18.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "setproctitle==1.3.4 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "setuptools==75.5.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "six==1.16.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "smmap==5.0.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "sympy==1.13.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "tqdm==4.66.5 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "triton==3.0.0 ; python_full_version == '3.12.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "typing-extensions==4.12.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "urllib3==2.2.3 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "wandb==0.18.7 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "pyproject-toml>=0.1.0",
    "ipython>=9.4.0",
    "pytest>=8.4.1",
    "ruff>=0.13.1",
    "nltk>=3.9.1",
    "regex>=2025.9.18",
    "torch>=2.4.1",
]
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rnn_code*"]
exclude = ["tests*", "data*", "scripts*", "log*", "wandb*", "strat_experiments*"]
